objects/HealthCloudGA__IndividualRecordTypeMapper__mdt.object
<CustomObject>
    <fields>
        <fullName>HealthCloudGA__AccountRecordTypeNamespace__c</fullName>
        <label>Record Type Namespace (Account)</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__AccountRecordType__c</fullName>
        <label>Account Record Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ContactRecordTypeNamespace__c</fullName>
        <label>Record Type Namespace (Contact)</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ContactRecordType__c</fullName>
        <label>Contact Record Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__DetailPage__c</fullName>
        <label>Detail Page</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IndividualType__c</fullName>
        <description>Account Type</description>
        <label>Account SubType</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HealthCloudGA__LeadRecordTypeNamespace__c</fullName>
        <label>Record Type Namespace (Lead)</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__LeadRecordType__c</fullName>
        <description>Record type on Lead object</description>
        <label>Lead Record Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Individual Record Type Mapper</label>
    <pluralLabel>Individual Record Type Mappers</pluralLabel>
</CustomObject>